Added sentence about robot

--- a/index.html
+++ b/index.html
@@ -11,6 +11,7 @@
 		<h1>Git, GitHub & the Command Line</h1>
 		<p>Gotta love becoming a collaborative coder <3</p>
 		<img src="img/happy-blue-robot.png">
+		<p> Wow, what a happy blue robot!</p>
 	</section>
 </body>
 </html>
